[package]
name = "bonding-curve-system"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.29.0" }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=2.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = "3.2.3"

